# rust-ffi-demo

./: .travis.yml  Cargo.toml  build.rs
src/: keychain-wrapper.h  main.rs
src/keychain/: cfutil.rs  mod.rs  native.rs
